--- a/src/components/MobileDropDown/Details/details.css
+++ b/src/components/MobileDropDown/Details/details.css
@@ -33,7 +33,6 @@
 .details__homeIcon {
   margin-right: 1rem;
   color: var(--lg-clr);
-  /* margin-bottom: 0.5rem; */
 }
 
 .details__mainTitle span:nth-child(2) {
@@ -43,6 +42,8 @@
 
 .details__nav {
   padding: 0.5rem 1rem;
+  display: grid;
+  grid-template-columns: repeat(auto-fit, minmax(300px, 1fr));
 }
 
 .details__innerTitle {
@@ -75,6 +76,25 @@
   margin-left: 0.6rem;
   font-size: 0.9rem;
   line-height: 1.5;
+  opacity: 0.7;
+  transition: var(--transition);
+}
+
+.details__innerListItem:hover {
+  opacity: 1;
+  font-weight: 600;
+  color: var(--lg-clr);
+}
+
+/* .details__innerListItem:hover .details__innerLink {
+  text-decoration: underline;
+  text-decoration-color: var(--lg-clr);
+} */
+.details__innerLink {
+  /* text-decoration: underline; */
+  display: block;
+  padding-bottom: 0.1rem;
+  width: 100%;
 }
 
 @media (min-width: 348px) {
