--- a/src/components/Navbar/moreDetails.css
+++ b/src/components/Navbar/moreDetails.css
@@ -59,3 +59,10 @@
     margin-top: unset;
   }
 }
+
+@media (min-width: 1400px) {
+  .navMoreDetails {
+    margin: unset;
+    margin-left: 3rem;
+  }
+}
